<resources>
    <string name="app_name">Weather App</string>
    <string name="hint_city">Enter city name…</string>
    <string name="cd_search">Search</string>
    <string name="cd_gps">Use my location</string>
    <string name="cd_weather_icon">Weather icon</string>
    <string name="cd_humidity">Humidity</string>
    <string name="cd_wind">Wind</string>
    <string name="cd_pressure">Pressure</string>

    <string name="feels_like">Feels like %1$s</string>
    <string name="min_max">Min: %1$s  |  Max: %2$s</string>
    <string name="humidity_value">%1$d%%</string>
    <string name="wind_value">%1$.1f %2$s</string>
    <string name="pressure_value">%1$d hPa</string>

    <string name="label_humidity">Humidity</string>
    <string name="label_wind">Wind</string>
    <string name="label_pressure">Pressure</string>

    <string name="error_empty_city">Please enter a city name</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="location_unavailable">Location unavailable. Try again.</string>
    <string name="location_error">Failed to get location</string>
</resources>
